--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             <ul>
               <li><a href="#">About</a></li>
+              <li><a href="#">Programmes</a></li>
               <li><a href="#">Events</a></li>
-              <li><a href="#">Coaching</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </nav>
@@ -83,16 +83,13 @@
             <picture>
               <source
                 media="(max-width: 576px)"
-                srcset="./images/mobile/image-deep-earth.jpg"
+                srcset="./images/desktop/boxfit.jpg"
               />
               <source
                 media="(min-width: 577px)"
-                srcset="./images/desktop/image-deep-earth.jpg"
+                srcset="./images/desktop/boxfit.jpg"
               />
-              <img
-                src="./images/desktop/image-deep-earth.jpg"
-                alt="image-deep-earth"
-              />
+              <img src="./images/desktop/boxfit.jpg" alt="image-boxfit" />
             </picture>
             <h3>boxfit group sessions</h3>
           </div>
@@ -101,15 +98,15 @@
             <picture>
               <source
                 media="(max-width: 576px)"
-                srcset="./images/mobile/image-night-arcade.jpg"
+                srcset="./images/desktop/fight-club.jpg"
               />
               <source
                 media="(min-width: 577px)"
-                srcset="./images/desktop/image-night-arcade.jpg"
+                srcset="./images/desktop/fight-club.jpg"
               />
               <img
-                src="./images/desktop/image-night-arcade.jpg"
-                alt="image-night-arcade"
+                src="./images/desktop/fight-club.jpg"
+                alt="image-fight-club"
               />
             </picture>
             <h3>fight club drills</h3>
@@ -119,15 +116,15 @@
             <picture>
               <source
                 media="(max-width: 576px)"
-                srcset="./images/mobile/image-soccer-team.jpg"
+                srcset="./images/desktop/white-collar-boxing.jpg"
               />
               <source
                 media="(min-width: 577px)"
-                srcset="./images/desktop/image-soccer-team.jpg"
+                srcset="./images/desktop/white-collar-boxing.jpg"
               />
               <img
-                src="./images/desktop/image-soccer-team.jpg"
-                alt="image-soccer-team"
+                src="./images/desktop/white-collar-boxing.jpg"
+                alt="image-white-training"
               />
             </picture>
             <h3>white collar training</h3>
@@ -137,13 +134,16 @@
             <picture>
               <source
                 media="(max-width: 576px)"
-                srcset="./images/mobile/image-grid.jpg"
+                srcset="./images/desktop/strength-and-condition.jpg"
               />
               <source
                 media="(min-width: 577px)"
-                srcset="./images/desktop/image-grid.jpg"
+                srcset="./images/desktop/strength-and-condition.jpg"
               />
-              <img src="./images/desktop/image-grid.jpg" alt="image-grid" />
+              <img
+                src="./images/desktop/strength-and-condition.jpg"
+                alt="image-s&c"
+              />
             </picture>
             <h3>strength and conditioning</h3>
           </div>
@@ -152,15 +152,15 @@
             <picture>
               <source
                 media="(max-width: 576px)"
-                srcset="./images/mobile/image-from-above.jpg"
+                srcset="./images/desktop/one-to-one.jpg"
               />
               <source
                 media="(min-width: 577px)"
-                srcset="./images/desktop/image-from-above.jpg"
+                srcset="./images/desktop/one-to-one.jpg"
               />
               <img
-                src="./images/desktop/image-from-above.jpg"
-                alt="image-from-above"
+                src="./images/desktop/one-to-one.jpg"
+                alt="image-one-to-one"
               />
             </picture>
             <h3>one-to-one coaching</h3>
@@ -169,6 +169,13 @@
 
         <a href="#" class="btn-summary">summary</a>
       </section>
+    </div>
+
+    <div class="container">
+      <section class="content">
+        <section class="header">
+          <h2>Upcoming Events</h2>
+        </section>
     </div>
 
     <footer>
@@ -182,10 +189,9 @@
             <div class="footer-nav">
               <ul>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Careers</a></li>
+                <li><a href="#">Programmes</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Support</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
             </div>
           </div>
