--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
 
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Programmes</a></li>
             <li><a href="#">Timetable</a></li>
             <li><a href="#">Contact</a></li>
@@ -98,7 +98,7 @@
             <source media="(min-width: 577px)" srcset="./images/desktop/boxfit.jpg" />
             <img src="./images/desktop/boxfit.jpg" alt="image-boxfit" />
           </picture>
-          <h3>boxfit group sessions</h3>
+          <h3>boxfit</h3>
           <a href="#" class="btn-summary">Book With Us</a>
         </div>
 
@@ -108,7 +108,7 @@
             <source media="(min-width: 577px)" srcset="./images/desktop/fight-club.jpg" />
             <img src="./images/desktop/fight-club.jpg" alt="image-fight-club" />
           </picture>
-          <h3>fight club drills</h3>
+          <h3>fight club </h3>
           <a href="#" class="btn-summary">Book With Us</a>
         </div>
 
@@ -162,7 +162,7 @@
             <th scope="col">Friday</th>
           </thead>
           <tbody>
-            <tr class="bg-pink">
+            <tr class="bg-black">
               <th scope="row">12pm - 2pm</th>
               <td><span>Fight Club</span></td>
               <td><span>Fight Club</span></td>
@@ -170,33 +170,66 @@
               <td><span>Fight Club</span></td>
               <td><span>Fight Club</span></td>
             </tr>
-            <tr>
+            <tr class="bg-black">
               <th scope="row">5pm - 6pm</th>
-              <td><span class="bg-green">Boxfit</span></td>
-              <td><span class="bg-blue">Strength and Conditioning</span></td>
-              <td><span class="bg-green">Boxfit</span></td>
-              <td><span class="bg-blue">Strength and Conditioning</span></td>
-              <td><span class="bg-green">Boxfit</span></td>
+              <td><span>Boxfit</span></td>
+              <td><span>Strength and Conditioning</span></td>
+              <td><span>Boxfit</span></td>
+              <td><span>Strength and Conditioning</span></td>
+              <td><span>Boxfit</span></td>
             </tr>
-            <tr>
+            <tr class="bg-black">
               <th scope="row">6pm - 7pm</th>
-              <td><span class="bg-grey">White Collar Boxing</span></td>
-              <td><span class="bg-grey">White Collar Boxing</span></td>
-              <td><span class="bg-blue">Strength and Conditioning</span></td>
-              <td><span class="bg-grey">White Collar Boxing</span></td>
-              <td><span class="bg-green">Boxfit</span></td>
+              <td><span>White Collar Boxing</span></td>
+              <td><span>White Collar Boxing</span></td>
+              <td><span>Strength and Conditioning</span></td>
+              <td><span>White Collar Boxing</span></td>
+              <td><span>Boxfit</span></td>
             </tr>
-            <tr>
+            <tr class="bg-black">
               <th scope="row">7pm - 8pm</th>
-              <td><span class="bg-green">Boxfit</span></td>
-              <td><span class="bg-blue">Strength and Conditioning</span></td>
-              <td><span class="bg-green">Boxfit</span></td>
-              <td><span class="bg-blue">Strength and Conditioning</span></td>
-              <td><span class="bg-grey">White Collar Boxing</span></td>
+              <td><span>Boxfit</span></td>
+              <td><span>Strength and Conditioning</span></td>
+              <td><span>Boxfit</span></td>
+              <td><span>Strength and Conditioning</span></td>
+              <td><span>White Collar Boxing</span></td>
             </tr>
           </tbody>
         </table>
       </div>
+  </div>
+
+  <!-- Contact Section -->
+  <div class="container">
+    <section id="contact">
+      <section class="header">
+        <h2>get in touch</h2>
+      </section>
+      <p class="section-info">
+        If you have any enquiries or would like to learn more then please fill 
+        out the form below and we'll get back to you within 48 hours.</p>
+      <!-- Contact Form -->
+      <div class="form">
+        <form name="contact" method="POST" data-netlify="true">
+          <div class="field">
+            <input type="text" name="name" id="name" placeholder="Your name*" required>
+          </div>
+          <div class="field">
+            <input type="email" name="email" id="email" placeholder="Your email*" required>
+          </div>
+          <div class="field">
+            <textarea name="message" id="message" cols="30" rows="5"
+              placeholder="Message*" required></textarea>
+          </div>
+          <div class="field">
+            <div data-netlify-recaptcha="true"></div>
+          </div>
+          <div>
+            <a href="#" class="btn-summary">Send Message</a>
+          </div>
+        </form>
+      </div>
+    </section>
   </div>
 
   <footer>
@@ -209,7 +242,7 @@
 
           <div class="footer-nav">
             <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="#">About Us</a></li>
               <li><a href="#">Programmes</a></li>
               <li><a href="#">Timetable</a></li>
               <li><a href="#">Contact</a></li>
