--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="img-box">
         <img class="about-image" src="./images/desktop/about-image.jpg" alt="about-us" />
         <div class="content-box">
-          <h2>Box&Burn | Boxing Classes</h2>
+          <h2 class="heading-title">Box&Burn | Boxing Classes</h2>
           <p>
             At Box&Burn our mission is to provide provide the best
             boxing classes on offer. We eat, sleep and breathe boxing
@@ -73,11 +73,13 @@
             <br>
             <br>
             <br>
-            <i>"Love everything about Box&Burn. I've been going for three years
-              strong now. Seriously check it out if you want to challenge yourself!"</i>
+            <div class="review">
+              <i>"Love everything about Box&Burn. I've been going for three years
+                strong now. Seriously check it out if you want to challenge yourself!"</i>
+                <div class="move-right"><i>Rebecca</i></div>
+              </div>
             <br>
             <br>
-            <div class="move-right"><i>Rebecca</i></div>
           </p>
         </div>
       </div>
@@ -86,7 +88,7 @@
 
   <div class="container">
     <section class="content">
-      <section class="header">
+      <section class="heading-title">
         <h2>our programmes</h2>
       </section>
 
@@ -148,7 +150,7 @@
 
   <div class="container">
     <section class="content">
-      <section class="header">
+      <section class="heading-title">
         <h2>timetable</h2>
       </section>
       <div class="timetable">
@@ -202,7 +204,7 @@
   <!-- Contact Section -->
   <div class="container">
     <section id="contact">
-      <section class="header">
+      <section class="heading-title">
         <h2>get in touch</h2>
       </section>
       <p class="section-info">
