--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           </div>
 
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Programmes</a></li>
-            <li><a href="#">Timetable</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about-section">About Us</a></li>
+            <li><a href="#programmes-section">Programmes</a></li>
+            <li><a href="#timetable-section">Timetable</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
         <div class="nav-toggle">
@@ -42,19 +42,18 @@
         <h1><i>"champions are made in the ring"</i></h1>
       </section>
       <div class="cta">
-        <a href="#" class="cta-button">Check Out Our Programmes</a>
-        <!-- <img src="./images/down-arrow.png" alt="down-arrow" id="down-arrow"/> -->
+        <a href="#" class="cta-button">Check Out What We Offer</a>
       </div>
       
     </div>
   </header>
 
-  <div class="container">
+  <div class="container" >
     <section class="about-us">
       <div class="img-box">
         <img class="about-image" src="./images/desktop/about-image.jpg" alt="about-us" />
         <div class="content-box">
-          <h2 class="heading-title">Box&Burn | Boxing Classes</h2>
+          <h2 class="heading-title" id="about-section">Box&Burn | Boxing Classes</h2>
           <p>
             At Box&Burn our mission is to provide provide the best
             boxing classes on offer. We eat, sleep and breathe boxing
@@ -92,7 +91,7 @@
   </div>
 
   <div class="container">
-    <section class="content">
+    <section class="content" id="programmes-section">
       <section class="heading-title">
         <h2>our programmes</h2>
       </section>
@@ -154,7 +153,7 @@
   </div>
 
   <div class="container">
-    <section class="content">
+    <section class="content" id="timetable-section">
       <section class="heading-title">
         <h2>timetable</h2>
       </section>
