--- a/index.html
+++ b/index.html
@@ -97,11 +97,10 @@
       </section>
 
       <div class="grid-item">
-
         <div class="item">
           <picture>
-            <source media="(max-width: 576px)" srcset="./images/desktop/boxfit.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/boxfit.jpg" />
+            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/boxfit.jpg" />
+            <source media="(min-width: 577px)" srcset="./images/desktop/boxfit.jpg" /> -->
             <img src="./images/desktop/boxfit.jpg" alt="image-boxfit" />
           </picture>
           <h3>boxfit</h3>
@@ -110,8 +109,8 @@
 
         <div class="item">
           <picture>
-            <source media="(max-width: 576px)" srcset="./images/desktop/fight-club.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/fight-club.jpg" />
+            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/fight-club.jpg" />
+            <source media="(min-width: 577px)" srcset="./images/desktop/fight-club.jpg" /> -->
             <img src="./images/desktop/fight-club.jpg" alt="image-fight-club" />
           </picture>
           <h3>fight club </h3>
@@ -120,8 +119,8 @@
 
         <div class="item">
           <picture>
-            <source media="(max-width: 576px)" srcset="./images/desktop/white-collar-boxing.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/white-collar-boxing.jpg" />
+            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/white-collar-boxing.jpg" />
+            <source media="(min-width: 577px)" srcset="./images/desktop/white-collar-boxing.jpg" /> -->
             <img src="./images/desktop/white-collar-boxing.jpg" alt="image-white-training" />
           </picture>
           <h3>white collar training</h3>
@@ -130,8 +129,8 @@
 
         <div class="item">
           <picture>
-            <source media="(max-width: 576px)" srcset="./images/desktop/strength-and-condition.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/strength-and-condition.jpg" />
+            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/strength-and-condition.jpg" />
+            <source media="(min-width: 577px)" srcset="./images/desktop/strength-and-condition.jpg" /> -->
             <img src="./images/desktop/strength-and-condition.jpg" alt="image-s&c" />
           </picture>
           <h3>strength and conditioning</h3>
@@ -140,8 +139,8 @@
 
         <div class="item">
           <picture>
-            <source media="(max-width: 576px)" srcset="./images/desktop/one-to-one.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/one-to-one.jpg" />
+            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/one-to-one.jpg" />
+            <source media="(min-width: 577px)" srcset="./images/desktop/one-to-one.jpg" /> -->
             <img src="./images/desktop/one-to-one.jpg" alt="image-one-to-one" />
           </picture>
           <h3>one-to-one coaching</h3>
@@ -202,6 +201,18 @@
             </tr>
           </tbody>
         </table>
+        <div class="timetable-small bg-black">
+          <span>Fight Club</span>&nbsp;&nbsp;&nbsp;Monday to Friday (12pm - 2pm)
+          <br>
+          <br>
+          <span>Boxfit</span>&nbsp;&nbsp;&nbsp;Mon & Wed (5pm - 6pm, 7pm - 8pm) / Fri (5pm - 7pm)
+          <br>
+          <br>
+          <span>Strength & Conditioning</span>&nbsp;&nbsp;&nbsp;Tues & Thurs (5pm - 6pm, 7pm - 8pm)
+          <br>
+          <br>
+          <span>White Collar Boxing</span>&nbsp;&nbsp;&nbsp;Mon, Tues, Thurs (6pm - 7pm) / Fri (7pm - 8pm)
+        </div>
       </div>
   </div>
 
