--- a/index.html
+++ b/index.html
@@ -202,16 +202,16 @@
           </tbody>
         </table>
         <div class="timetable-small bg-black">
-          <span>Fight Club</span>&nbsp;&nbsp;&nbsp;Monday to Friday (12pm - 2pm)
+          <span>Fight Club</span>&nbsp;&nbsp;&nbsp;<p>Monday to Friday (12pm - 2pm)</p>
           <br>
           <br>
-          <span>Boxfit</span>&nbsp;&nbsp;&nbsp;Mon & Wed (5pm - 6pm, 7pm - 8pm) / Fri (5pm - 7pm)
+          <span>Boxfit</span>&nbsp;&nbsp;&nbsp;<p>Mon & Wed (5pm - 6pm, 7pm - 8pm) / Fri (5pm - 7pm)</p>
           <br>
           <br>
-          <span>Strength & Conditioning</span>&nbsp;&nbsp;&nbsp;Tues & Thurs (5pm - 6pm, 7pm - 8pm)
+          <span>Strength & Conditioning</span>&nbsp;&nbsp;&nbsp;<p>Tues & Thurs (5pm - 6pm, 7pm - 8pm)</p>
           <br>
           <br>
-          <span>White Collar Boxing</span>&nbsp;&nbsp;&nbsp;Mon, Tues, Thurs (6pm - 7pm) / Fri (7pm - 8pm)
+          <span>White Collar Boxing</span>&nbsp;&nbsp;&nbsp;<p>Mon, Tues, Thurs (6pm - 7pm) / Fri (7pm - 8pm)</p>
         </div>
       </div>
   </div>
