--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1><i>"champions are made in the ring"</i></h1>
       </section>
       <div class="cta">
-        <a href="#programmes-section" class="cta-button nav-link">Check Out Our Programmes</a>
+        <a href="#programmes-section" class="cta-button">Check Out Our Programmes</a>
       </div>
       
     </div>
