--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
       <div class="grid-item">
         <div class="item">
           <picture>
-            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/boxfit.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/boxfit.jpg" /> -->
             <img src="./images/desktop/boxfit.jpg" alt="image-boxfit" />
           </picture>
           <h3>boxfit</h3>
@@ -109,8 +107,6 @@
 
         <div class="item">
           <picture>
-            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/fight-club.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/fight-club.jpg" /> -->
             <img src="./images/desktop/fight-club.jpg" alt="image-fight-club" />
           </picture>
           <h3>fight club </h3>
@@ -119,8 +115,6 @@
 
         <div class="item">
           <picture>
-            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/white-collar-boxing.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/white-collar-boxing.jpg" /> -->
             <img src="./images/desktop/white-collar-boxing.jpg" alt="image-white-training" />
           </picture>
           <h3>white collar training</h3>
@@ -129,8 +123,6 @@
 
         <div class="item">
           <picture>
-            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/strength-and-condition.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/strength-and-condition.jpg" /> -->
             <img src="./images/desktop/strength-and-condition.jpg" alt="image-s&c" />
           </picture>
           <h3>strength and conditioning</h3>
@@ -139,8 +131,6 @@
 
         <div class="item">
           <picture>
-            <!-- <source media="(max-width: 576px)" srcset="./images/desktop/one-to-one.jpg" />
-            <source media="(min-width: 577px)" srcset="./images/desktop/one-to-one.jpg" /> -->
             <img src="./images/desktop/one-to-one.jpg" alt="image-one-to-one" />
           </picture>
           <h3>one-to-one coaching</h3>
@@ -227,7 +217,7 @@
         out the form below and we'll get back to you within 48 hours.</p>
       <!-- Contact Form -->
       <div class="form">
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact">
           <div class="field">
             <input type="text" name="name" id="name" placeholder="Your name*" required>
           </div>
